# semiavidpr-experiments

./: Cargo.toml  README.md  data-experiments-RAW-25.txt  data-experiments-RAW-33.txt  data-experiments-RAW-45.txt  data-experiments-cpuinfo.txt  data-experiments-rate25-bls12-381.txt  data-experiments-rate25-bn254.txt  data-experiments-rate25.txt  data-experiments-rate33-bls12-381.txt  data-experiments-rate33-bn254.txt  data-experiments-rate33.txt  data-experiments-rate45-bls12-381.txt  data-experiments-rate45-bn254.txt  data-experiments-rate45.txt  data-experiments2-RAW-25.txt  data-experiments2-RAW-33.txt  data-experiments2-RAW-45.txt  data-experiments2-rate25-bls12-381.txt  data-experiments2-rate25-bn254.txt  data-experiments2-rate25.txt  data-experiments2-rate33-bls12-381.txt  data-experiments2-rate33-bn254.txt  data-experiments2-rate33.txt  data-experiments2-rate45-bls12-381.txt  data-experiments2-rate45-bn254.txt  data-experiments2-rate45.txt  data-experiments3-RAW-33.txt  data-experiments3-rate33-bls12-381.txt  data-experiments3-rate33-bn254.txt  data-experiments3-rate33.txt  format-results.sh  format-results2.sh  format-results3.sh  related-work.jl  run-experiments.sh  run-experiments2.sh  run-experiments3.sh
benches/: dispersal.rs
src/: lib.rs  main.rs  tests.rs  utils.rs
